# auth-service/docs/swagger.yaml
@@ -120,4 +120,33 @@ paths:
       summary: Register a new user
       tags:
       - Auth
+  /auth/validate:
+    get:
+      consumes:
+      - application/json
+      description: Checks if the JWT token is valid
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Validate JWT token
+      tags:
+      - Auth
 swagger: "2.0"
